# docs/swagger.json
@@ -119,6 +119,11 @@
         },
         "/image/delete": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "사용자 이미지를 삭제합니다",
                 "consumes": [
                     "application/json"
@@ -155,6 +160,13 @@
                             "additionalProperties": true
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -174,6 +186,11 @@
         },
         "/image/upload": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "사용자 이미지를 업로드하고 DB에 정보를 저장합니다",
                 "consumes": [
                     "multipart/form-data"
@@ -186,13 +203,6 @@
                 ],
                 "summary": "이미지 업로드",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "사용자 ID",
-                        "name": "user_id",
-                        "in": "formData",
-                        "required": true
-                    },
                     {
                         "type": "file",
                         "description": "이미지 파일",
@@ -210,6 +220,13 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -294,6 +311,9 @@
                         },
                         "username": {
                             "type": "string"
+                        },
+                        "uuid": {
+                            "type": "string"
                         }
                     }
                 }
@@ -319,7 +339,7 @@
                 "message": {
                     "type": "string"
                 },
-                "user_id": {
+                "uuid": {
                     "type": "string"
                 }
             }
@@ -328,9 +348,6 @@
             "type": "object",
             "properties": {
                 "image_id": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
